Change link from login to calendar list for admin #119

--- a/src/Ezac.Roster.Web/Components/Pages/Home.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Home.razor
@@ -56,7 +56,7 @@
 
                     Message = "Logging in";
                     LogInBooLService.IsLoggedIn = true;
-                    NavigationManager.NavigateTo("/calendar");
+                    NavigationManager.NavigateTo("/calendarslist");
                 }
                 else
                 {
