--- a/src/Ezac.Roster.Web/Components/Components/CalendarForm.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarForm.razor
@@ -7,16 +7,16 @@
     </div>
     <div class="form-group">
         <label for="startDate">Start datum</label>
-        <input type="date" class="form-control" id="startDate" required value="@Calendar.Start.ToString("yyyy-MM-dd")" @onchange="UpdateStartDate">
+        <input type="date" class="form-control" id="startDate" max="@DateTime.Now.ToString("yyyy-MM-dd")" required value="@Calendar.Start.ToString("yyyy-MM-dd")" @onchange="UpdateStartDate">
     </div>
     <div class="form-group">
         <label for="endDate">Eind datum</label>
-        <input type="date" class="form-control" id="endDate" required value="@Calendar.End.ToString("yyyy-MM-dd")" @onchange="UpdateEndDate">
+        <input type="date" class="form-control" id="endDate" min="@DateTime.Now.ToString("yyyy-MM-dd")" required value="@Calendar.End.ToString("yyyy-MM-dd")" @onchange="UpdateEndDate">
     </div>
     <div>
         <div class="form-group">
             <label for="extraDays">Extra dagen beschikbaar zetten</label>
-            <input type="date" class="form-control" id="extraDays" @bind="dateToAdd" />
+            <input type="date" class="form-control" id="extraDays" @bind="dateToAdd" min="@Calendar.Start.ToString("yyyy-MM-dd")" max="@Calendar.End.ToString("yyyy-MM-dd")" />
             <button type="button" class="btn btn-primary" @onclick="(e) => HandleClick(e)">Voeg toe</button>
         </div>
     </div>
