--- a/src/Ezac.Roster.Web/Components/Components/CalendarForm.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarForm.razor
@@ -3,7 +3,7 @@
 <form @onsubmit="FormHandler">
     <div class="form-group">
         <label for="calendarName">Kalender naam</label>
-        <input type="text" class="form-control" id="calendarName" placeholder="Kalender naam" required @bind-value="Calendar.Name">
+        <input type="text" class="form-control" id="calendarName" placeholder="Kalender naam" @oninput="SetButtonDisable" required @bind-value="Calendar.Name">
     </div>
     <div class="form-group">
         <label for="startDate">Start datum</label>
@@ -20,7 +20,7 @@
             <button type="button" class="btn btn-primary" @onclick="(e) => HandleClick(e)">Voeg toe</button>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Bewerk kalender</button>
+    <button type="submit" class="btn btn-primary" disabled="@buttonDisable" @onclick="DisableButton">Bewerk kalender</button>
 </form>
 
 @code {
@@ -41,6 +41,8 @@
 
     private DateTime dateToAdd { get; set; }
 
+    private bool buttonDisable = true;
+
     protected override void OnInitialized()
     {
         dateToAdd = DateTime.Now;
@@ -50,4 +52,14 @@
     {
         AddExtraDay(dateToAdd);
     }
+
+    private void SetButtonDisable()
+    {
+        buttonDisable = !string.IsNullOrEmpty(Calendar.Name);
+    }
+
+    private void DisableButton()
+	{
+		buttonDisable = true;
+	}
 }
