--- a/src/Ezac.Roster.Web/Components/Components/CalendarOverview.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarOverview.razor
@@ -103,14 +103,15 @@
                 {
                     if (period.Name == "A" || period.Name == "B")
                     {
-                        period.Jobs = new Job[] { new Job { Name = "Lierist", Experience = 1 },
-								   new Job { Name = "Startofficier", Experience = 1 },
-								   new Job { Name = "Instructeur", Experience = 1 },
-								   new Job { Name = "Instructeur (DDI)", Experience = 1} };
+                        period.Jobs = new Job[] { new Job { Name = "Lierist", Experience = 1, Weight = 5 },
+								   new Job { Name = "Startofficier", Experience = 1, Weight = 5 },
+								   new Job { Name = "Instructeur", Experience = 1, Weight = 5 },
+								   new Job { Name = "Instructeur (DDI)", Experience = 1, Weight = 5 } 
+                        };
                     }
                     else if (period.Name == "C")
                     {
-                        period.Jobs = new Job[] { new Job { Name = "Bardienst", Experience = 1 } };
+                        period.Jobs = new Job[] { new Job { Name = "Bardienst", Experience = 1, Weight = 5 }};
                     }
                 }
             }
@@ -134,7 +135,6 @@
         var dayToRemove = Calendar.Days.FirstOrDefault(day => day.Equals(closedDay));
         if (dayToRemove != null)
         {
-            dayToRemove.DayPeriods.Clear();
             closedDay.DayPeriods.Clear();
             Calendar.Days.Remove(dayToRemove);
             closedDay.IsOpen = false;
