--- a/src/Ezac.Roster.Web/Components/Components/DateItem.razor
+++ b/src/Ezac.Roster.Web/Components/Components/DateItem.razor
@@ -5,7 +5,7 @@
 	<div class="date-item">
 		<div class="date-item-content">
 			<span>@day.Name: @day.Date.Date.ToString("dd/MM/yyyy")</span>
-			<button @onclick="CloseDay">X</button>
+			<button @onclick="CloseDay">x</button>
 		</div>
 	</div>
 </li>
