--- a/src/Ezac.Roster.Web/Components/Components/CalendarForm.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarForm.razor
@@ -11,12 +11,12 @@
     </div>
     <div class="form-group">
         <label for="endDate">Eind datum</label>
-        <input type="date" class="form-control" id="endDate" min="@DateTime.Now.ToString("yyyy-MM-dd")" required value="@Calendar.End.ToString("yyyy-MM-dd")" @onchange="UpdateEndDate">
+        <input type="date" class="form-control" id="endDate" min="@DateTime.Now.ToString("yyyy-MM-dd")" max="@DateTime.Now.AddYears(1).ToString("yyyy-MM-dd")" required value="@Calendar.End.ToString("yyyy-MM-dd")" @onchange="UpdateEndDate">
     </div>
     <div>
         <div class="form-group">
             <label for="extraDays">Extra dagen beschikbaar zetten</label>
-            <input type="date" class="form-control" id="extraDays" @bind="dateToAdd" min="@Calendar.Start.ToString("yyyy-MM-dd")" max="@Calendar.End.ToString("yyyy-MM-dd")" />
+            <input type="date" class="form-control" id="extraDays" @oninput="CheckDateToAdd" @bind="dateToAdd" min="@Calendar.Start.ToString("yyyy-MM-dd")" max="@Calendar.End.ToString("yyyy-MM-dd")" />
             <button type="button" class="btn btn-primary" @onclick="(e) => HandleClick(e)">Voeg toe</button>
         </div>
     </div>
@@ -44,6 +44,18 @@
     protected override void OnInitialized()
     {
         dateToAdd = DateTime.Now;
+    }
+
+    private void CheckDateToAdd()
+    {
+        if (DateTime.TryParse(dateToAdd.ToString(), out DateTime result) && result <= Calendar.End && result >= Calendar.Start)
+		{
+			dateToAdd = result;
+		}
+		else
+		{
+			dateToAdd = DateTime.Now;
+		}
     }
 
     private void HandleClick(MouseEventArgs e)
