add override task oninitializeasynce and call refreshdata method #121

--- a/src/Ezac.Roster.Web/Components/Components/SchedulerPopUp.razor
+++ b/src/Ezac.Roster.Web/Components/Components/SchedulerPopUp.razor
@@ -65,7 +65,14 @@
     [Parameter]
     public EventCallback<UserListModel> OnDragged { get; set; }
 
-    
+    protected async override Task OnInitializedAsync()
+    {
+        await RefreshData();
+        if (Staff.Count > 0)
+        {
+            Staff.Clear();
+        }
+    }
 
     public async Task RefreshData()
     {
