Add properties toggleschedulerpopup draggedmember dropzones users and staff

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -105,6 +105,23 @@ else
     private static List<Permission> permissions;
     private string SelectedMonth;
     private List<string> periodNames = new List<string>();
+    private bool ToggleSchedulerPopUp { get; set; }
+    private UserListModel draggedMember = null;
+    private Dictionary<string, UserListModel> Dropzones = new();
+    private List<UserListModel> _users { get; set; } = new List<UserListModel>();
+    public List<UserListModel> Staff { get; set; } = new List<UserListModel>();
+
+    
+
+    
+
+
+    
+
+    
+
+    
+
     
 
 
