Create method handledragstart #121

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -116,7 +116,11 @@ else
         Dropzones[dropzoneId] = null;
     }
 
-    
+    public Task HandleDragStart(UserListModel user)
+    {
+        draggedMember = user;
+        return Task.CompletedTask;
+    }
 
 
     
