Create method cancelpopup #121

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -142,7 +142,10 @@ else
         ToggleSchedulerPopUp = true;
     }
 
-    
+    private void CancelPopUp()
+    {
+        ToggleSchedulerPopUp = false;
+    }
 
     
 
