Fix update issue for calendars #119

--- a/src/Ezac.Roster.Web/Components/Pages/CalendarUpdatePage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarUpdatePage.razor
@@ -30,6 +30,7 @@
     {
         var calendarUpdateRequestModel = new ApplicationCalendarUpdateRequestModel()
             {
+                Id = _calendar.Id,
                 Name = _calendar.Name,
                 Start = _calendar.Start,
                 End = _calendar.End,
