--- a/src/Ezac.Roster.Web/Components/Components/DateItem.razor
+++ b/src/Ezac.Roster.Web/Components/Components/DateItem.razor
@@ -1,5 +1,4 @@
-﻿@using Ezac.Roster.Domain.Entities
-@rendermode InteractiveServer
+﻿@rendermode InteractiveServer
 
 <li>
 	<div class="date-item">
