--- a/src/Ezac.Roster.Web/Components/_Imports.razor
+++ b/src/Ezac.Roster.Web/Components/_Imports.razor
@@ -10,3 +10,9 @@
 @using Ezac.Roster.Web.Components
 @using MudBlazor
 @*@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage*@
+@using Ezac.Roster.Domain.Entities
+@using Ezac.Roster.Domain.Interfaces.Services
+@using Ezac.Roster.Web.Components.Components
+@using Ezac.Roster.Web.Models
+@using Ezac.Roster.Domain.Models
+@using Ezac.Roster.Domain.Services.Models
