--- a/src/Ezac.Roster.Web/Components/Pages/CalendarCreatorPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarCreatorPage.razor
@@ -1,22 +1,17 @@
 ﻿@page "/calendar-creator"
 @rendermode InteractiveServer
 
-@using Ezac.Roster.Domain.Interfaces.Services
-@using Ezac.Roster.Domain.Entities
-@using Ezac.Roster.Web.Components.Components
-@using Ezac.Roster.Domain.Services.Models
-
 @inject ICalendarService CalendarService
 @inject NavigationManager NavigationManager
 
 <CalendarOverview Calendar="_calendar" FormHandler="CreateCalendar" />
 
 @code {
-    private ApplicationCalendar _calendar { get; set; }
+    private CalenderViewModel _calendar { get; set; }
 
     protected override void OnInitialized()
     {
-        _calendar = new ApplicationCalendar()
+        _calendar = new CalenderViewModel()
         {
             Start = DateTime.Now,
             End = DateTime.Now,
