--- a/src/Ezac.Roster.Web/Components/Pages/CalendarUpdatePage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarUpdatePage.razor
@@ -1,10 +1,11 @@
 ﻿@page "/calendarupdate/{calendarId}"
-@rendermode InteractiveServer
+@rendermode @(new InteractiveServerRenderMode(false))
 
 @using Ezac.Roster.Domain.Interfaces.Services
 @using Ezac.Roster.Domain.Entities
 @using Ezac.Roster.Web.Components.Components
 @using Ezac.Roster.Domain.Services.Models
+@using Ezac.Roster.Web.Models
 
 @inject ICalendarService CalendarService
 @inject NavigationManager NavigationManager
@@ -15,27 +16,34 @@
     [Parameter]
     public string calendarId { get; set; }
 
-    private ApplicationCalendar _calendar { get; set; }
+    private CalenderViewModel _calendar { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
         var result = await CalendarService.GetByIdAsync(Guid.Parse(calendarId));
         if (result.IsSucces)
         {
-            _calendar = result.Value;
+            _calendar = new CalenderViewModel()
+			{
+				Id = result.Value.Id,
+				Name = result.Value.Name,
+				Start = result.Value.Start,
+				End = result.Value.End,
+				Days = result.Value.Days.ToList()
+			};
         }
-	}
+    }
 
     private async Task UpdateCalendar()
     {
         var calendarUpdateRequestModel = new ApplicationCalendarUpdateRequestModel()
-            {
+        {
                 Id = _calendar.Id,
                 Name = _calendar.Name,
                 Start = _calendar.Start,
                 End = _calendar.End,
                 Days = _calendar.Days
-            };
+        };
 
         await CalendarService.UpdateAsync(calendarUpdateRequestModel);
         NavigationManager.NavigateTo("calendarslist");
